[package]
name = "aws-lock-client"
authors = ["Dawid Nowak <nowakd@gmail.com>"]
version = "0.0.3"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"
publish = false

[dependencies]
bytes = "1.0"
log = "*"
hostname = "*"
uuid = { version = "0.8", features = ["serde", "v4"] }
currenttimemillis = {version ="*", git = "https://github.com/swir-rs/currenttimemillis-rs"}
rusoto_dynamodb={ version="0.46"}
rusoto_signature={ version="0.46"}
rusoto_core={ version="0.46"}
async-trait="*"

[dev-dependencies]
env_logger = "*"

[[example]]
name = "simple"
